fixed background image ie cut off

--- a/stylesheets/_lcc-header.scss
+++ b/stylesheets/_lcc-header.scss
@@ -125,7 +125,7 @@ $header-height-mobile:50px !default;
     width: 250px;
     height: 25px;
     background-position: left top;
-    background-size: 100%;
+    background-size: 100% 100%;
     margin: 12px 0;
     line-height: 0;
     @media (max-width: 990px) {
