--- a/stylesheets/base_styles/_footer.scss
+++ b/stylesheets/base_styles/_footer.scss
@@ -174,7 +174,7 @@ footer.main {
 
 .logo-footer span {
     background: file-url('lcc-logo-white-01.svg') center center no-repeat;
-    background-size: 100%;
+    background-size: 100% 100%;
     width: 150px;
     height: 45px;
     display: block;
